--- a/TODO
+++ b/TODO
@@ -4,7 +4,7 @@ TO DO next
 DONE 28/10/2019
 second_preimage_resistance, hidden_key_second_preimage_resistance,
    fixed_hash_second_preimage_resistance
-DONE 28/10/2019, still to test and document
+DONE 28/10/2019, still to test
 
 preimage_resistance, hidden_key_preimage_resistance, fixed_hash_preimage_resistance
 see https://eprint.iacr.org/2004/035 (consider random challenge only)
