--- a/TODO
+++ b/TODO
@@ -6,7 +6,9 @@ second_preimage_resistance, hidden_key_second_preimage_resistance,
    fixed_hash_second_preimage_resistance
 DONE 28/10/2019, still to test
 
-preimage_resistance, hidden_key_preimage_resistance, fixed_hash_preimage_resistance
+preimage_resistance, hidden_key_preimage_resistance,
+   fixed_hash_preimage_resistance
+DONE 31/10/2019, still to test and document
 see https://eprint.iacr.org/2004/035 (consider random challenge only)
 
 Specify IND$-CPA
